cabal-version:      3.4
name:               cob
version:            0.1.0.0
synopsis:           Cult of Bits haskell interface
description:        Cob (RecordM + UserM) interface (boilerplate free!)
license:            MIT
tested-with:        GHC==9.4.1,
                    GHC==9.2.1,
                    GHC==9.0.2,
                    GHC==8.10.7
bug-reports:        https://github.com/alt-romes/cob-hs
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
copyright:          (c) Rodrigo Mesquita
category:           API
extra-source-files: CHANGELOG.md

flag examples
  description: Build the examples
  default: False
  manual: True

library
    exposed-modules:  Cob,
                      Cob.Ref,
                      Cob.Log,
                      Cob.Session,
                      Cob.Exception,
                      Cob.Utils,
                      Cob.RecordM,
                      Cob.RecordM.Definition,
                      Cob.RecordM.Query,
                      Cob.RecordM.Record,
                      Cob.RecordM.DateTime,
                      Cob.RecordM.Servant,
                      Cob.RecordM.TH,
                      Cob.UserM,
                      Cob.UserM.Entities,
                      Cob.UserM.Servant,
                      Cob.Simulator

    ghc-options:      -Wall -Wtabs
    build-depends:    base >= 4 && <= 5,
                      template-haskell,
                      containers,
                      text,
                      bytestring,
                      mtl,
                      async,

                      free,

                      -- Network
                      servant,
                      servant-client >= 0.20,
                      http-client,
                      http-client-tls,

                      -- Logging
                      fast-logger,

                      -- Pretty printing
                      prettyprinter,
                      prettyprinter-ansi-terminal,

                      -- Deriving (currently unused I think)
                      generics-sop, sop-core,

                      -- JSON
                      aeson,

                      -- Streaming
                      streamly-core >= 0.1,
                      streamly >= 0.9,

                      -- Util
                      time


    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NamedFieldPuns, Rank2Types, ScopedTypeVariables, LambdaCase, TypeApplications, FlexibleContexts, FlexibleInstances

-- A library for Cob Servant utilities
library cob-servant
    visibility: public
    exposed-modules:  Cob.Servant

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0,
                      mtl,
                      cob,
                      servant-server

    hs-source-dirs:   cob-servant
    default-language: Haskell2010

library cob-xlsx
    visibility: public
    exposed-modules:  Cob.RecordM.Definition.Xlsx

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14,
                      mtl,
                      cob,
                      xlsx >= 1.1,
                      async,
                      -- We get lens because xlsx already depends on them
                      lens,
                      servant-client,
                      text, bytestring, containers, aeson, async-pool

    hs-source-dirs:   cob-xlsx
    default-language: Haskell2010

executable cob-import-def
    main-is: Main.hs
    hs-source-dirs: executables/cob-import-def
    build-depends:  base, mtl, text, containers, aeson, bytestring,
                    cob, cob:cob-xlsx, optparse-generic, async, async-pool
    default-language: GHC2021


test-suite cob-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base, cob, tasty, tasty-hunit, mtl, text, aeson
    hs-source-dirs: tests
    default-language: GHC2021


-- test-suite laws
--     type: exitcode-stdio-1.0
--     main-is: Lawful.hs
--     hs-source-dirs: tests
--     default-language: Haskell2010
--     build-depends:    base >= 4 && <= 5,
--                       QuickCheck,
--                       quickcheck-classes,
--                       mtl,
--                       dlist,
--                       cob

if flag(examples) {
    executable mocker
        main-is:          Main.hs

        -- If not invoked with +RTS -N<num capabilities> then only one thread is used
        ghc-options:      -threaded -rtsopts

        build-depends:    base >= 4 && <= 5,
                          cob,

                          microlens,
                          microlens-th,
                          streamly

        hs-source-dirs:   examples/mocker
        default-language: Haskell2010

    executable examinator9000
        main-is:          Main.hs
        other-modules:    Examinator, Examinator.View, Examinator.Monad

        -- If not invoked with +RTS -N<num capabilities> then only one thread is used
        ghc-options:      -threaded -rtsopts

        build-depends:    base >= 4 && <= 5,
                          cob, mtl,
                          ansi-terminal,
                          prettyprinter,
                          prettyprinter-ansi-terminal,
                          microlens,
                          microlens-th,
                          streamly,
                          vector,
                          haskeline,
                          vty,
                          brick

        hs-source-dirs:   examples/examinator9000
        default-language: Haskell2010
}
