cabal-version:   3.4
name:            cob-mcp
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cob-mcp
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0,
                      cob, hs-mcp,
                      containers, text, aeson, process
    hs-source-dirs:   app
    default-language: Haskell2010
