cabal-version:      2.4
name:               cob-reflex
version:            0.1.0.0
synopsis:           Cob + Reflex

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable demo
    main-is:          Demo.hs
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base >= 4 && <= 5,
                      text,
                      mtl,
                      reflex,
                      reflex-dom,
                      cob,
                      cob-reflex

library
    exposed-modules:  Cob.RecordM.Reflex,
                      Cob.UserM.Reflex 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      mtl,
                      time >= 1,
                      cob,
                      reflex,
                      reflex-dom

    hs-source-dirs:   src
    default-language: Haskell2010
