cabal-version:      3.14
name:               cob-swift-library
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
build-type:         Hooks
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

custom-setup
  setup-depends:
    base        >= 4.18 && < 5,
    Cabal-hooks >= 3.14 && < 3.15,
    Cabal-syntax >= 3.14 && < 3.15,
    swift-ffi

common warnings
    ghc-options: -Wall

-- library
--     import:           warnings
--     exposed-modules:  Swift.Cob, Swift.Cob.Moat
--     -- other-modules:
--     -- other-extensions:
--     build-depends:    base, cob, template-haskell, swift-ffi, mtl
--     hs-source-dirs:   src
--     default-language: GHC2024

foreign-library cob-swift
    type: native-shared

    -- This should work on Mac, despite being undefined behaviour
    -- See https://www.hobson.space/posts/haskell-foreign-library/ (great read)
    options: standalone

    other-modules: Foreign.Cob
    build-depends: base, swift-ffi, cob, mtl, aeson
                    -- cob-swift,
    hs-source-dirs: flib


library
    exposed-modules: Foreign.Cob
    build-depends: base, swift-ffi, cob, mtl, aeson
                    -- cob-swift,
    hs-source-dirs: flib
