cabal-version:      3.4
name:               cob-xlsx
version:            0.1.0.0
synopsis:           CoB Xlsx utils
-- description:
license:            MIT
tested-with:        GHC==9.4.1,
bug-reports:        https://github.com/alt-romes/cob-hs
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
copyright:          (c) Rodrigo Mesquita
category:           API
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Cob.RecordM.Definition.Xlsx

    build-depends:    base >=4.14,
                      mtl,
                      cob,
                      xlsx >= 1.1,
                      async,
                      -- We get lens because xlsx already depends on them
                      lens,
                      servant-client,
                      text, bytestring, containers, aeson, async-pool,
                      prettyprinter, text-metrics

    hs-source-dirs:   src
    default-language: Haskell2010

--------------------------------------------------------------------------------
-- * Executable Programs
--------------------------------------------------------------------------------

executable cob-import-def
    main-is: Main.hs
    hs-source-dirs: executables/cob-import-def
    build-depends:  base, mtl, text, containers, aeson, bytestring,
                    cob, cob-xlsx, cob-mermaid, optparse-generic, async, async-pool, text-metrics
    default-language: GHC2021
